--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "jquery": "^3.1.1",
     "laravel-mix": "4.0.12",
     "lodash": "^4.17.4",
-    "vue": "^2.5.21"
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.5.21",
+    "vue-router": "^3.0.2",
+    "vue-template-compiler": "^2.5.21"
   }
 }
