--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/public/assets/js/app.js": "/public/assets/js/app.js",
-    "/public/assets/css/app.css": "/public/assets/css/app.css"
+    "/public/assets/css/app.css": "/public/assets/css/app.css",
+    "/public/assets/js/materialize.js": "/public/assets/js/materialize.js"
 }
