--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "vue": "^2.5.21",
     "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.5.21"
+  },
+  "dependencies": {
+    "vuex": "^3.0.1"
   }
 }
