--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "fuel/orm": "1.8.*",
         "fuel/parser": "1.8.*",
         "fuelphp/upload": "2.0.6",
-        "firebase/php-jwt": "^5.0"
+        "firebase/php-jwt": "^5.0",
+        "gravatarphp/gravatar": "^2.0"
     },
     "require-dev": {
         "fuel/docs": "1.8.*"
