--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-template-compiler": "^2.5.21"
   },
   "dependencies": {
+    "gravatar": "^1.8.0",
     "vuejs-jwt": "^1.1.0",
     "vuex": "^3.0.1"
   }
