--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "devDependencies": {
     "axios": "^0.18.0",
-    "bootstrap-sass": "^3.3.7",
+    "bootstrap-sass": ">=3.4.1",
     "cross-env": "^3.2.3",
-    "jquery": "^3.1.1",
-    "laravel-mix": "4.0.12",
+    "jquery": "^3.4.1",
+    "laravel-mix": "^4.0.15",
     "lodash": "^4.17.4",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
